--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ html{
     --ColorCuaternario: #0a3871;
     --colorCinco: #D8DFE8;
     --colorSeis: #495057;
+    --colorSiete: #F3F5FC;
+    --colorOcho:#343A40;
 }
 
 /* selector */
@@ -32,7 +34,7 @@ body{
 
 /* header logo */
 header{
-    width: 100px;
+    width: 100%;
     /* height: 48px; */
     padding-left: 40px;
     padding-top: 40px;
@@ -44,16 +46,17 @@ main{
     display: grid;
     /* height: 90vh; */
     width: 100vw;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: 10% repeat(5, 1fr);
     grid-template-rows: repeat(1, 1fr);
     flex: 1;
     place-items: center;
+    gap: 15px;
 }
 
 /* secciones */
 .contenedores{
     height: 100%;
-    width: 100%;
+    width: 92%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,31 +71,70 @@ main{
 
 /* Grid */
 .grid-item-1{
-    grid-column: 1 / 5;
+    grid-column: 2 / 5;
     
 }
 
+/* contenedor textarea */
 .contenedores textarea{
-    height: 30%;
-    width: 69%;
-    
+    height: 65%;
+    width: 100%;
+    margin-top: 5%;
+    background: none;
+    resize: none;
+    outline: none;
+    border: none;
+}
+
+.contenedores textarea::placeholder{
+    color: var(--ColorCuaternario);
+    font-size: 2rem;
 }
 
 .advertencia{
-    
-    font-size: 15px;
-    padding-right: 45%;
+    width: 100%;
+    font-size: 0.75rem;
+    margin: 0 5px;
+    color: var(--colorSeis)
 }
 
 /* grid-2 */
 .grid-item-2{
     grid-column: 5 / 7;
+    background-color: var(--ColorTerciario);
+    border-radius: 32px;
+    width: 75%;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
+
+.grid-item-2 textarea{
+    background-image: url("../img/muneco.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    font-size: 1.5rem;
+    padding: 0 1.7rem;
+
+}
+
+.grid-item-2 h3{
+    color: var(--colorOcho);
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.grid-item-2 p{
+    color: var(--colorSeis);
+    font-size: 1rem;
+    text-align: center;
+    
+}
+
 
 /* cajabotones */
 #cajaBotones{
-    width: 69%;
-    height: 15%;
+    width: 100%;
+    height: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,9 +149,14 @@ main{
     border: var(--ColorCuaternario) solid 1px;
 }
 
+.textos{
+    width: 80%;
+}
+
 /* boton-encriptar */
 #btn-encriptar{
     background: var(--ColorCuaternario);
+    color: var(--ColorTerciario);
 }
 
 /* boton-desencriptar */
@@ -119,18 +166,92 @@ main{
 
 /* botoncopiar */
 #btn-copiar{
+    
     background: var(--colorCinco);
 }
 
 
-
-#textoEntrada{ 
-    background: var(--colorPrincipal);
-    font-size: 20px;
+footer{
+    font-size: 1.5rem;
+    text-align: center;
     color: var(--ColorCuaternario);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
-::placeholder{
+
+footer a i{
     color: var(--ColorCuaternario);
+    font-size: 2.5rem;
 }
 
+@media screen and (max-width:768px){
+    header{
+        left: 0;
+    }
 
+
+main{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+}
+
+.grid-item-1{
+    min-height: 80%;
+}
+
+.grid-item-2{
+    height: auto;
+    width: 92%;
+    padding: 2rem 0;
+}
+
+.grid-item-2 textarea{
+    display: none;
+}
+
+footer{
+    margin-top: 1.5rem;
+}
+
+}
+
+@media screen and (max-width:375px){
+    main{
+        height: auto;
+    }
+
+
+.grid-item-1{
+    min-height: 50%;
+    margin: 0 auto;
+}
+
+.grid-item-1 textarea{
+    height: 50%;
+    color: var(--ColorCuaternario);
+    font-size: 1.5rem;
+}
+
+#cajaBotones{
+    height: 100px;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.grid-item-2{
+    height: auto;
+}
+
+.grid-item-2 textarea{
+    height: auto;
+}
+
+footer{
+    height: 80px;
+    margin: auto 0;
+}
+
+}
