--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,60 @@
 /* rem */
-html{
+html {
     font-size: 16px;
 }
 
 /* variables */
-:root{
-    --colorPrincipal: #E5E5E5;
+:root {
+    --colorPrincipal: #e5e5e5;
     --ColorSecundario: #609ed4;
     --ColorTerciario: #ffffff;
     --ColorCuaternario: #0a3871;
-    --colorCinco: #D8DFE8;
+    --colorCinco: #d8dfe8;
     --colorSeis: #495057;
-    --colorSiete: #F3F5FC;
-    --colorOcho:#343A40;
+    --colorSiete: #f3f5fc;
+    --colorOcho: #343a40;
 }
 
 /* selector */
-*{
+* {
     box-sizing: border-box;
 }
 
 /* body */
-body{
+body {
     font-size: 2rem;
     background: var(--colorPrincipal);
     display: flex;
     flex-direction: column;
     height: 100%;
     position: fixed;
-    justify-content: space-between;
-    
+    width: 100%;
 }
 
 /* header logo */
-header{
-    width: 100%;
-    /* height: 48px; */
-    padding-left: 40px;
-    padding-top: 40px;
-    position: relative;
+header {
+    flex: 0 0 6.5%;
+    display: flex;
+    align-items: center;
+}
+
+header img {
+    height: 30px;
 }
 
 /* cuerpo página */
-main{
+main {
+    flex: 1 1 80%;
     display: grid;
-    /* height: 90vh; */
-    width: 100vw;
-    grid-template-columns: 10% repeat(5, 1fr);
+    width: 100%;
+    grid-template-columns: 10% repeat(6, 1fr);
     grid-template-rows: repeat(1, 1fr);
-    flex: 1;
     place-items: center;
     gap: 15px;
 }
 
 /* secciones */
-.contenedores{
+.contenedores {
     height: 100%;
     width: 92%;
     display: flex;
@@ -64,78 +64,78 @@ main{
 }
 
 /* advertencia e icono */
-.contenedores p{
+.contenedores p {
     padding: 20px;
     color: var(--colorSeis);
 }
 
 /* Grid */
-.grid-item-1{
-    grid-column: 2 / 5;
+.grid-item-1 {
+    grid-column: 2 / 6;
 }
 
-.grid-item-1 textarea{
+.grid-item-1 textarea {
     font-size: 1.5rem;
 }
 
 /* contenedor textarea */
-.contenedores textarea{
+.contenedores textarea {
     height: 65%;
     width: 100%;
-    margin-top: 5%;
-    background: none;
+    background-color: #f3f5fc;
+    border-radius: 20px;
+    padding: 20px 0px 0px 20px;
     resize: none;
     outline: none;
     border: none;
 }
 
-.contenedores textarea::placeholder{
+.contenedores textarea::placeholder {
     color: var(--ColorCuaternario);
     font-size: 1.5rem;
 }
 
-.advertencia{
+.advertencia {
     width: 100%;
     font-size: 0.75rem;
     margin: 0 5px;
-    color: var(--colorSeis)
+    color: var(--colorSeis);
 }
 
 /* grid-2 */
-.grid-item-2{
-    grid-column: 5 / 7;
+.grid-item-2 {
+    grid-column: 6 / 8;
     background-color: var(--ColorTerciario);
     border-radius: 32px;
     width: 75%;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
 
-/*.grid-item-2 textarea{
-    background-image: url("../img/muneco.png");
-    background-repeat: no-repeat;
-    background-position: center;
+.grid-item-2 textarea {
     font-size: 1.5rem;
     padding: 0 1.7rem;
-
+    display: none;
 }
-*/
-.grid-item-2 h3{
+
+.grid-item-2 img {
+    height: 200px;
+}
+
+.grid-item-2 h3 {
     color: var(--colorOcho);
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
 }
 
-.grid-item-2 p{
+.grid-item-2 p {
     color: var(--colorSeis);
     font-size: 1rem;
     text-align: center;
-    
 }
 
-
 /* cajabotones */
-#cajaBotones{
+#cajaBotones {
     width: 100%;
     height: 10%;
     display: flex;
@@ -144,37 +144,35 @@ main{
     grid-gap: 50px;
 }
 
-
-.botones{
+.botones {
     width: 80%;
     border-radius: 24px;
     height: 67px;
     border: var(--ColorCuaternario) solid 1px;
 }
 
-.textos{
+.textos {
     width: 80%;
 }
 
 /* boton-encriptar */
-#btnencriptar{
+#btnencriptar {
     background: var(--ColorCuaternario);
     color: var(--ColorTerciario);
 }
 
 /* boton-desencriptar */
-#btndesencriptar{
+#btndesencriptar {
     background: var(--colorCinco);
 }
 
 /* botoncopiar */
-#btncopiar{
-    
+#btncopiar {
     background: var(--colorCinco);
 }
 
-
-footer{
+footer {
+    flex: 0 0 8%;
     font-size: 1.5rem;
     text-align: center;
     color: var(--ColorCuaternario);
@@ -184,77 +182,73 @@ footer{
     gap: 15px;
 }
 
-footer a i{
-    color: var(--ColorCuaternario);
-    font-size: 2.5rem;
-}
-
-@media screen and (max-width:768px){
-    header{
-        left: 0;
-    }
-
-
-main{
-    display: flex;
-    flex-direction: column;
-    height: auto;
-}
-
-.grid-item-1{
-    min-height: 80%;
-}
-
-.grid-item-2{
-    height: auto;
-    width: 92%;
-    padding: 2rem 0;
-}
-
-.grid-item-2 textarea{
-    display: none;
-}
-
-footer{
-    margin-top: 1.5rem;
-}
-
-}
-
-@media screen and (max-width:375px){
-    main{
-        height: auto;
-    }
-
-
-.grid-item-1{
-    min-height: 50%;
-    margin: 0 auto;
-}
-
-.grid-item-1 textarea{
-    height: 50%;
+footer a i {
     color: var(--ColorCuaternario);
     font-size: 1.5rem;
 }
 
-#cajaBotones{
-    height: 100px;
-    flex-direction: column;
-    gap: 15px;
+@media screen and (max-width: 768px) {
+    header {
+        left: 0;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+
+    .grid-item-1 {
+        min-height: 80%;
+    }
+
+    .grid-item-2 {
+        height: auto;
+        width: 92%;
+        padding: 2rem 0;
+    }
+
+    .grid-item-2 textarea {
+        display: none;
+    }
+
+    footer {
+        margin-top: 1.5rem;
+    }
 }
 
-.grid-item-2{
-    height: auto;
-}
+@media screen and (max-width: 375px) {
+    main {
+        height: auto;
+    }
 
-.grid-item-2 textarea{
-    height: auto;
-}
+    .grid-item-1 {
+        min-height: 50%;
+        margin: 0 auto;
+    }
 
-footer{
-    height: 80px;
-    margin: auto 0;
-}
+    .grid-item-1 textarea {
+        height: 50%;
+        color: var(--ColorCuaternario);
+        font-size: 1.5rem;
+    }
 
+    #cajaBotones {
+        height: 100px;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .grid-item-2 {
+        height: auto;
+    }
+
+    .grid-item-2 textarea {
+        height: auto;
+    }
+
+    footer {
+        height: 80px;
+        margin: auto 0;
+    }
 }
